in html section:  added a container class to wrap the context of kvast-history section  added class section__title to h2 heading  added class origin to the definition list and also class clearfix to fix the flow  added reference-title to the definition terms in the css section:  added grids to the kvast-history section

--- a/styles.css
+++ b/styles.css
@@ -119,8 +119,9 @@
   padding: 0;
   font-size: 40px;
   line-height: 60px;
+  text-transform: uppercase;
   color: #000000;
-  margin-bottom: 75px;
+  margin-bottom: 75px; 
 }
 /*
 .new-collection_list{
@@ -164,6 +165,39 @@
 }
 
 .features__item:last-child{
+  margin: 0;
+}
+
+.kvast-history{
+  margin:0;
+  margin-top: 80px;
+}
+
+.kvast-history .section__title{
+  margin-bottom: 60px;
+}
+
+.origin{
+  margin: 0;
+  padding: 0;
+} 
+
+.reference-title{
+  margin: 0;
+  padding: 0;
+  margin-bottom: 20px;
+  font-size: 20px;
+  line-height: 30px;
+  color: #000000;
+}
+
+.origin dd{
+  height: 120px;
+  margin: 0;
+  margin-bottom: 60px;
+}
+
+.origin dd:last-child{
   margin: 0;
 }
 
